# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  chat.py  documents.py
backend/app/services/: ai.py  doc_types.py  renderer.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: DocumentPicker.tsx  GenericDocForm.tsx  GenericDocPreview.tsx  NdaChat.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/lib/: api.ts  doc-types.ts  nda-types.ts
scripts/: start-mac.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
